--- a/static/user_guide.html
+++ b/static/user_guide.html
@@ -874,6 +874,20 @@ Ham Radio Olympics automatically tracks world records across all competitions. R
 View current records at <code>/records</code>.
 </p>
 
+<h4 id="honorable-mentions">Honorable Mentions</h4>
+
+<p>
+When a confirmed QSO exists that surpasses the current world record but wasn't made during competition, it appears as an "Honorable Mention" below the records table. A QSO is considered "outside competition" if it was either:
+</p>
+
+<ul>
+<li>Made outside the active Olympiad date range, OR</li>
+<li>Made during the Olympiad but doesn't match any active match target</li>
+</ul>
+<p>
+This feature recognizes exceptional QSOs while maintaining the integrity of competition records. Think of it as a humbling reminder: someone out there did better when it didn't count.
+</p>
+
 <h3 id="62-personal-bests">6.2 Personal Bests</h3>
 
 <p>
